--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -6,17 +6,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity$PlaceholderFragment">
+    tools:context="com.example.android.sunshine.app.MainActivity.ForecastFragment">
 
-
-    
-    
     <ListView
         android:id="@+id/listview_forecast"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        />
-
+        android:layout_height="match_parent" />
 
 </FrameLayout>
